SERVER-73106 Explicitly persist range deletion task with local write concern